--- a/ULog/ui/en.lproj/ULogLogWindowController.xib
+++ b/ULog/ui/en.lproj/ULogLogWindowController.xib
@@ -29,7 +29,7 @@
                             <rect key="frame" x="0.0" y="0.0" width="1000" height="345"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
-                                <textView editable="NO" importsGraphics="NO" findStyle="panel" allowsNonContiguousLayout="YES" id="QRk-eG-PWZ">
+                                <textView editable="NO" importsGraphics="NO" allowsNonContiguousLayout="YES" id="QRk-eG-PWZ">
                                     <rect key="frame" x="0.0" y="0.0" width="1000" height="345"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
