--- a/ULog/ui/en.lproj/ULogLogWindowController.xib
+++ b/ULog/ui/en.lproj/ULogLogWindowController.xib
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="11201" systemVersion="16B2548a" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2657" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="11201"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="11542"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="ULogLogWindowController">
             <connections>
+                <outlet property="clearButton" destination="tmS-nC-gvx" id="JUu-EL-yOQ"/>
+                <outlet property="pauseButton" destination="Q6k-hO-IXw" id="xcH-yG-HbF"/>
+                <outlet property="saveButton" destination="9Jo-pY-aLg" id="XZF-uJ-SCP"/>
+                <outlet property="settingsButton" destination="5Hp-uu-9LU" id="ldg-8y-tGE"/>
                 <outlet property="textView" destination="QRk-eG-PWZ" id="2Op-fa-c0w"/>
                 <outlet property="window" destination="oSb-2r-Rbs" id="bdC-ty-gMf"/>
             </connections>
